Changing StakeBox text to Navdroid

--- a/src/app/generic-rpc-form/generic-rpc-form.component.html
+++ b/src/app/generic-rpc-form/generic-rpc-form.component.html
@@ -50,7 +50,7 @@
   </mz-modal-header>
   <mz-modal-content>
     <p>
-      You are about to run the following command on your NavCoin&nbsp;StakeBox.
+      You are about to run the following command on your NavCoin&nbsp;Navdroid.
     </p>
     <p>
       Make sure you are aware of what the outcome of running this command is
