--- a/src/app/homepage/wallet-status/wallet-status.component.html
+++ b/src/app/homepage/wallet-status/wallet-status.component.html
@@ -86,7 +86,7 @@
   </mz-modal-header>
   <mz-modal-content>
     <p>
-      You are about to encrypt your NavCoin&nbsp;StakeBox wallet. Be aware that
+      You are about to encrypt your NavCoin&nbsp;Navdroid wallet. Be aware that
       if you lose this encryption password you will be unable to recover your
       coins.
     </p>
