--- a/src/app/settings/config-edit/config-edit.component.html
+++ b/src/app/settings/config-edit/config-edit.component.html
@@ -46,7 +46,7 @@
   </mz-modal-header>
   <mz-modal-content>
     <p>
-      You are about to update your NavCoin&nbsp;StakeBox's wallet config.
+      You are about to update your NavCoin&nbsp;Navdroid's wallet config.
     </p>
     <p>
       Make sure your settings in your config are correct before you save them.
