Changed Stakebox text to Navdroid

--- a/src/app/settings/change-wallet-password/change-wallet-password.component.html
+++ b/src/app/settings/change-wallet-password/change-wallet-password.component.html
@@ -60,7 +60,7 @@
   <mz-modal-content>
     <p>
       You are about to update the username and password used to login to the
-      NavCoin&nbsp;StakeBox interface. If lose this password you will lose
+      NavCoin&nbsp;Navdroid interface. If lose this password you will lose
       access to the wallet so make sure you keep it in a safe place.
     </p>
   </mz-modal-content>
