--- a/src/app/settings/set-main-address/set-main-address.component.html
+++ b/src/app/settings/set-main-address/set-main-address.component.html
@@ -4,7 +4,7 @@
   </mz-card-title>
   <mz-card-content>
     <p>
-      Let the Stakebox generate an address for you (GENERATE NEW ADDRESS) or
+      Let the Navdroid generate an address for you (GENERATE NEW ADDRESS) or
       enter a specific address yourself.
     </p>
     <form (ngSubmit)="updateAddress(newAddress)" #loginForm="ngForm">
