--- a/src/app/settings/ui-password/ui-password.component.html
+++ b/src/app/settings/ui-password/ui-password.component.html
@@ -59,7 +59,7 @@
   <mz-modal-content>
     <p>
       You are about to update the username and password used to login to the
-      NavCoin&nbsp;StakeBox interface. If lose this password you will lose
+      NavCoin&nbsp;Navdroid interface. If lose this password you will lose
       access to the wallet so make sure you keep it in a safe place.
     </p>
     <p>Please enter your current username and password to confirm the change</p>
